# graphflex

./: .gitignore  README.md  example.ipynb  pyproject.toml
.github/workflows/: python-publish.yml
examples/: dgl_example.py  file_example.py  hdt_example.py  neo4j_example.py  rdflib_example.py
