[project]
name = "graphflex"
version = "0.1.0"
description = "Flexible Framework for Graph Feature Engineering"
authors = [
    {name = "Bram Steenwinckel", email = "bram.steenwinckel@ugent.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "rdflib-hdt>=3.1"
]

[project.optional-dependencies]
dgl = [
    "dgl==2.2.0",
    "torch==2.3.0",
    "torchdata==0.9.0",
    "PyYAML>=6.0.2",
    "pydantic>=2.10.6"]
neo4j = ["neo4j>=5.28.1"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

